#1 - Updated title of universe

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    <h1> Universe</h1>
+    <h1> Universe One </h1>
     <img
             src = "https://images-na.ssl-images-amazon.com/images/I/71i3zSC2d3L._AC_SX679_.jpg"
              alt="Universe">
